examples/test/testpolicy3808.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3808
  namespace: namespace230
spec:
  podSelector:
    matchLabels:
      key16: value23
      key44: value49
      key24: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value11
          key47: value9
      podSelector:
        matchLabels:
          key8: value11
          key34: value48
          key33: value12
